<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_salas"
            android:icon="@drawable/ic_menu_salas"
            android:title="@string/salas" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pessoas"
            android:icon="@drawable/ic_menu_pessoas"
            android:title="@string/pessoas" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_ranking"
            android:title="@string/rank" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sair" />
    </group>

</menu>
